src/assembler/parser/PasmParser.java
// Generated from /home/joona/realhome/quesler/src/assembler/Pasm.g4 by ANTLR 4.8
package assembler.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PasmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Register=1, Integer=2, Real=3, HexNumber=4, HexDigitPair=5, LabelSuffix=6, 
		DataPrefix=7, StringDataPrefix=8, Identifier=9, String=10, SingleQuoteString=11, 
		DoubleQuoteString=12, StatementSeparator=13, EndOfLine=14, ArgumentSeparator=15;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_codeBlock = 2, RULE_dataBlock = 3, 
		RULE_stringBlock = 4, RULE_labelList = 5, RULE_codeList = 6, RULE_dataList = 7, 
		RULE_stringList = 8, RULE_instruction = 9, RULE_argument = 10, RULE_label = 11, 
		RULE_data = 12, RULE_stringData = 13, RULE_maybeIdentifier = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "codeBlock", "dataBlock", "stringBlock", "labelList", 
			"codeList", "dataList", "stringList", "instruction", "argument", "label", 
			"data", "stringData", "maybeIdentifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "':'", "'HEX:'", "'STR:'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Register", "Integer", "Real", "HexNumber", "HexDigitPair", "LabelSuffix", 
			"DataPrefix", "StringDataPrefix", "Identifier", "String", "SingleQuoteString", 
			"DoubleQuoteString", "StatementSeparator", "EndOfLine", "ArgumentSeparator"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pasm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PasmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public BlockContext block;
		public List<BlockContext> blocks = new ArrayList<BlockContext>();
		public TerminalNode EOF() { return getToken(PasmParser.EOF, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PasmVisitor ) return ((PasmVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Integer) {
				{
				{
				setState(30);
				((ProgramContext)_localctx).block = block();
				((ProgramContext)_localctx).blocks.add(((ProgramContext)_localctx).block);
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public CodeBlockContext codeBlock() {
			return getRuleContext(CodeBlockContext.class,0);
		}
		public DataBlockContext dataBlock() {
			return getRuleContext(DataBlockContext.class,0);
		}
		public StringBlockContext stringBlock() {
			return getRuleContext(StringBlockContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PasmVisitor ) return ((PasmVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(38);
				codeBlock();
				}
				break;
			case 2:
				{
				setState(39);
				dataBlock();
				}
				break;
			case 3:
				{
				setState(40);
				stringBlock();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeBlockContext extends ParserRuleContext {
		public LabelListContext labelList() {
			return getRuleContext(LabelListContext.class,0);
		}
		public CodeListContext codeList() {
			return getRuleContext(CodeListContext.class,0);
		}
		public CodeBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).enterCodeBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).exitCodeBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PasmVisitor ) return ((PasmVisitor<? extends T>)visitor).visitCodeBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeBlockContext codeBlock() throws RecognitionException {
		CodeBlockContext _localctx = new CodeBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_codeBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			labelList();
			setState(44);
			codeList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataBlockContext extends ParserRuleContext {
		public LabelListContext labelList() {
			return getRuleContext(LabelListContext.class,0);
		}
		public DataListContext dataList() {
			return getRuleContext(DataListContext.class,0);
		}
		public DataBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).enterDataBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).exitDataBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PasmVisitor ) return ((PasmVisitor<? extends T>)visitor).visitDataBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataBlockContext dataBlock() throws RecognitionException {
		DataBlockContext _localctx = new DataBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dataBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			labelList();
			setState(47);
			dataList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringBlockContext extends ParserRuleContext {
		public LabelListContext labelList() {
			return getRuleContext(LabelListContext.class,0);
		}
		public StringListContext stringList() {
			return getRuleContext(StringListContext.class,0);
		}
		public StringBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).enterStringBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).exitStringBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PasmVisitor ) return ((PasmVisitor<? extends T>)visitor).visitStringBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringBlockContext stringBlock() throws RecognitionException {
		StringBlockContext _localctx = new StringBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stringBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			labelList();
			setState(50);
			stringList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelListContext extends ParserRuleContext {
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public List<TerminalNode> EndOfLine() { return getTokens(PasmParser.EndOfLine); }
		public TerminalNode EndOfLine(int i) {
			return getToken(PasmParser.EndOfLine, i);
		}
		public List<TerminalNode> StatementSeparator() { return getTokens(PasmParser.StatementSeparator); }
		public TerminalNode StatementSeparator(int i) {
			return getToken(PasmParser.StatementSeparator, i);
		}
		public LabelListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).enterLabelList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).exitLabelList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PasmVisitor ) return ((PasmVisitor<? extends T>)visitor).visitLabelList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelListContext labelList() throws RecognitionException {
		LabelListContext _localctx = new LabelListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_labelList);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(52);
					label();
					setState(53);
					match(EndOfLine);
					}
					} 
				}
				setState(59);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(60);
			label();
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==StatementSeparator || _la==EndOfLine) {
				{
				{
				setState(61);
				_la = _input.LA(1);
				if ( !(_la==StatementSeparator || _la==EndOfLine) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeListContext extends ParserRuleContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public List<TerminalNode> StatementSeparator() { return getTokens(PasmParser.StatementSeparator); }
		public TerminalNode StatementSeparator(int i) {
			return getToken(PasmParser.StatementSeparator, i);
		}
		public List<TerminalNode> EndOfLine() { return getTokens(PasmParser.EndOfLine); }
		public TerminalNode EndOfLine(int i) {
			return getToken(PasmParser.EndOfLine, i);
		}
		public CodeListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).enterCodeList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).exitCodeList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PasmVisitor ) return ((PasmVisitor<? extends T>)visitor).visitCodeList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeListContext codeList() throws RecognitionException {
		CodeListContext _localctx = new CodeListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_codeList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(67);
				instruction();
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==StatementSeparator || _la==EndOfLine) {
					{
					{
					setState(68);
					_la = _input.LA(1);
					if ( !(_la==StatementSeparator || _la==EndOfLine) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(76); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Register) | (1L << HexDigitPair) | (1L << Identifier))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataListContext extends ParserRuleContext {
		public List<DataContext> data() {
			return getRuleContexts(DataContext.class);
		}
		public DataContext data(int i) {
			return getRuleContext(DataContext.class,i);
		}
		public List<TerminalNode> StatementSeparator() { return getTokens(PasmParser.StatementSeparator); }
		public TerminalNode StatementSeparator(int i) {
			return getToken(PasmParser.StatementSeparator, i);
		}
		public List<TerminalNode> EndOfLine() { return getTokens(PasmParser.EndOfLine); }
		public TerminalNode EndOfLine(int i) {
			return getToken(PasmParser.EndOfLine, i);
		}
		public DataListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).enterDataList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).exitDataList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PasmVisitor ) return ((PasmVisitor<? extends T>)visitor).visitDataList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataListContext dataList() throws RecognitionException {
		DataListContext _localctx = new DataListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dataList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(78);
				data();
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==StatementSeparator || _la==EndOfLine) {
					{
					{
					setState(79);
					_la = _input.LA(1);
					if ( !(_la==StatementSeparator || _la==EndOfLine) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(84);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DataPrefix );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringListContext extends ParserRuleContext {
		public List<StringDataContext> stringData() {
			return getRuleContexts(StringDataContext.class);
		}
		public StringDataContext stringData(int i) {
			return getRuleContext(StringDataContext.class,i);
		}
		public List<TerminalNode> StatementSeparator() { return getTokens(PasmParser.StatementSeparator); }
		public TerminalNode StatementSeparator(int i) {
			return getToken(PasmParser.StatementSeparator, i);
		}
		public List<TerminalNode> EndOfLine() { return getTokens(PasmParser.EndOfLine); }
		public TerminalNode EndOfLine(int i) {
			return getToken(PasmParser.EndOfLine, i);
		}
		public StringListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).enterStringList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).exitStringList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PasmVisitor ) return ((PasmVisitor<? extends T>)visitor).visitStringList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringListContext stringList() throws RecognitionException {
		StringListContext _localctx = new StringListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stringList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(89);
				stringData();
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==StatementSeparator || _la==EndOfLine) {
					{
					{
					setState(90);
					_la = _input.LA(1);
					if ( !(_la==StatementSeparator || _la==EndOfLine) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(95);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(98); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==StringDataPrefix );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public MaybeIdentifierContext opcode;
		public ArgumentContext argument;
		public List<ArgumentContext> arguments = new ArrayList<ArgumentContext>();
		public TerminalNode EndOfLine() { return getToken(PasmParser.EndOfLine, 0); }
		public MaybeIdentifierContext maybeIdentifier() {
			return getRuleContext(MaybeIdentifierContext.class,0);
		}
		public List<TerminalNode> StatementSeparator() { return getTokens(PasmParser.StatementSeparator); }
		public TerminalNode StatementSeparator(int i) {
			return getToken(PasmParser.StatementSeparator, i);
		}
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public List<TerminalNode> ArgumentSeparator() { return getTokens(PasmParser.ArgumentSeparator); }
		public TerminalNode ArgumentSeparator(int i) {
			return getToken(PasmParser.ArgumentSeparator, i);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).exitInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PasmVisitor ) return ((PasmVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_instruction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			((InstructionContext)_localctx).opcode = maybeIdentifier();
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(101);
				match(StatementSeparator);
				setState(102);
				((InstructionContext)_localctx).argument = argument();
				((InstructionContext)_localctx).arguments.add(((InstructionContext)_localctx).argument);
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ArgumentSeparator) {
					{
					{
					setState(103);
					match(ArgumentSeparator);
					setState(104);
					((InstructionContext)_localctx).argument = argument();
					((InstructionContext)_localctx).arguments.add(((InstructionContext)_localctx).argument);
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==StatementSeparator) {
				{
				{
				setState(112);
				match(StatementSeparator);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(EndOfLine);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentContext extends ParserRuleContext {
		public Token value;
		public TerminalNode Integer() { return getToken(PasmParser.Integer, 0); }
		public TerminalNode Real() { return getToken(PasmParser.Real, 0); }
		public TerminalNode HexNumber() { return getToken(PasmParser.HexNumber, 0); }
		public TerminalNode String() { return getToken(PasmParser.String, 0); }
		public TerminalNode Register() { return getToken(PasmParser.Register, 0); }
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).enterArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).exitArgument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PasmVisitor ) return ((PasmVisitor<? extends T>)visitor).visitArgument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_argument);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			((ArgumentContext)_localctx).value = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Register) | (1L << Integer) | (1L << Real) | (1L << HexNumber) | (1L << String))) != 0)) ) {
				((ArgumentContext)_localctx).value = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public TerminalNode Integer() { return getToken(PasmParser.Integer, 0); }
		public TerminalNode LabelSuffix() { return getToken(PasmParser.LabelSuffix, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).exitLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PasmVisitor ) return ((PasmVisitor<? extends T>)visitor).visitLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(Integer);
			setState(123);
			match(LabelSuffix);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public TerminalNode DataPrefix() { return getToken(PasmParser.DataPrefix, 0); }
		public List<TerminalNode> HexDigitPair() { return getTokens(PasmParser.HexDigitPair); }
		public TerminalNode HexDigitPair(int i) {
			return getToken(PasmParser.HexDigitPair, i);
		}
		public TerminalNode EndOfLine() { return getToken(PasmParser.EndOfLine, 0); }
		public List<TerminalNode> StatementSeparator() { return getTokens(PasmParser.StatementSeparator); }
		public TerminalNode StatementSeparator(int i) {
			return getToken(PasmParser.StatementSeparator, i);
		}
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).enterData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasmListener ) ((PasmListener)listener).exitData(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PasmVisitor ) return ((PasmVisitor<? extends T>)visitor).visitData(this);
			else return visitor.visitChildren(this);
		}
	}
